Changed alignment for tutor list on mobile, all fixed now.

--- a/src/app/find-tutor/tutor-list/tutor-list.component.scss
+++ b/src/app/find-tutor/tutor-list/tutor-list.component.scss
@@ -140,6 +140,10 @@ tr {
     font-size: 0.7rem;
     padding: 0 0 0 0;
   }
+
+  span {
+    font-size: 0.8rem;
+  }
 }
 
 /* Make all descriptors such as Hourly Rate our orange color */
